fixed a bug that changing password window cannot display on safari

--- a/araqne-webconsole/src/main/resources/WEB-INF/css/app.css
+++ b/araqne-webconsole/src/main/resources/WEB-INF/css/app.css
@@ -290,15 +290,29 @@ thead th {
 
 .tbl-container {
 	width: 100%;
-	border: 1px solid #aaa;
+	border: 1px solid #ccc;
 	overflow-x: auto;
 	min-height: 220px;
+	border-radius: 5px;
 }
 
 .tbl-container > table {
 	display: table;
 	border: 0;
 	margin: 0;
+}
+
+.tbl-container .table-bordered thead:last-child tr:last-child>th:first-child, 
+.tbl-container .table-bordered tbody:last-child tr:last-child>td:first-child, 
+.tbl-container .table-bordered tbody:last-child tr:last-child>th:first-child {
+	-webkit-border-bottom-left-radius: 0px;
+	border-bottom-left-radius: 0px;
+	-moz-border-radius-bottomleft: 0px;
+}
+
+.tbl-container .table-bordered th:first-child, 
+.tbl-container .table-bordered td:first-child {
+	border-left: 0px;
 }
 
 tr[tr-selectable], tr[tr-multi-selectable] {
